# songride

./: .gitignore  .gitmodules  Cakefile  README  README.md  app.coffee  component.json  config.json.dist  config.yml.dist  kue-ui.coffee  kue-worker.coffee  package.json
analyzer/: Analyzer.hs  Config.hs  Datastore.hs  LICENSE  analyzer.cabal  build.sbt  statistics.hs
analyzer/project/: plugins.sbt
analyzer/src/main/scala/com/xhochy/songride/: Analyzer.scala  Artist.scala  CountryStatistics.scala  RogueMongoConnection.scala  SimpleArtist.scala  SimpleTag.scala  StaticMapClassifier.scala  StaticMapUserStats.scala  User.scala
db/: mongo.sh
fetcher/: config.rb.dist  fetcher.rb
public/: bootstrap  coffee-script.js  g.bar-min.js  jquery.min.js  raphael-min.js  raphael-world.js  songride.coffee  underscore-min.js
views/: error.jade  stats-error.jade  stats-form.jade  stats-lastfm.jade
web/: Cakefile  app.coffee  component.json  kue-ui.coffee  kue-worker.coffee  package.json
web/lib/: register.coffee
web/public/: d3.min.js  g.pie-min.js  g.raphael-min.js  raphael-world.js  songride.coffee  songride.js
web/public/stylesheets/: style.css
web/routes/: index.js
web/views/: index.jade  layout.jade  register-success.jade  register.jade  stats-form.jade  stats-lastfm.jade  stats-queued.jade
